--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "db-migrate": "db-migrate --env dev up",    
     "client:dev": "node client/build/dev-server.js",
     "client:build": "node client/build/build.js",
-    "client:unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.conf.js --single-run",
+    "dev:test": "karma start client/test/unit/karma.dev.config.js",
+    "client:unit": "cross-env BABEL_ENV=test karma start client/test/unit/karma.unit.config.js",
     "client:e2e": "node client/test/e2e/runner.js",
     "client:test": "npm run client:unit && npm run client:e2e",
     "client:lint": "eslint --ext .js,.vue client/src test/client/unit/specs test/client/e2e/specs",
