--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.1.4",
     "mysql2": "^1.5.1",
-    "node-sass": "^4.7.2"
+    "node-sass": "^4.7.2",
+    "sqlite3": "^3.1.13"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
